--- a/src/client/styles/step3.css
+++ b/src/client/styles/step3.css
@@ -1,56 +1,53 @@
 .step3_button {
-  --step3-bg-color: #2dcc70;
+  --step3-bg-color: #f4d03e;
 }
 
 .step3_button {
+    border-radius: 50%;
     background-color: var(--step3-bg-color);
-    transition: all .5s;
+    animation: pulsar 1s linear infinite;
+    transform-origin:50% 50%;
 }
 
 .step3_button:hover {
     background-color: var(--step3-bg-color);
 }
 
-.step3_button:before,
-.step3_button:after {
+#timer {
     position: absolute;
-    width: 100%;
+    left: 50%;
+    top: 50%;
+    display: block;
+    width: 90px;
+    height: 30px;
+    line-height: 30px;
+    margin-left: -45px;
+    margin-top: -15px;
     text-align: center;
-    content: '';
-    opacity: 0;
-    -webkit-transition: .4s,opacity .6s;
-    -moz-transition: .4s,opacity .6s;
-    -o-transition: .4s,opacity .6s;
-    transition: .4s,opacity .6s;
+    border-radius: 50%;
 }
 
-.step3_button:before {
-    content: attr(data-hover);
-    -webkit-transform: translate(-150%,0);
-    -moz-transform: translate(-150%,0);
-    -ms-transform: translate(-150%,0);
-    -o-transform: translate(-150%,0);
-    transform: translate(-150%,0);
-}
-
-.step3_button:hover:before {
-    opacity: 1;
-    -webkit-transform: translate(0,0);
-    -moz-transform: translate(0,0);
-    -ms-transform: translate(0,0);
-    -o-transform: translate(0,0);
-    transform: translate(0,0);
-    -webkit-transition-delay: .4s;
-    -moz-transition-delay: .4s;
-    -o-transition-delay: .4s;
-    transition-delay: .4s;
-}
-
-.step3_button:hover span {
-    opacity: 0;
-    -webkit-transform: scale(0.3);
-    -moz-transform: scale(0.3);
-    -ms-transform: scale(0.3);
-    -o-transform: scale(0.3);
-    transform: scale(0.3);
+@-webkit-keyframes pulsar {
+  0% {
+    border-width:5px;
+    border-color:rgba(0,0,0,0.2);
+    border-style:dotted;
+  }
+  25% {
+      border-width:10px;
+      border-style:double;
+  }
+  50% {
+      border-width:15px;
+      border-style:double;
+  }
+  75% {
+      border-width:10px;
+      border-style:double;
+  }
+  100% {
+      border-width:5px;
+      border-color:rgba(0,0,0,0.2);
+      border-style:dashed;
+  }
 }
