--- a/src/client/styles/progressBar.css
+++ b/src/client/styles/progressBar.css
@@ -11,6 +11,11 @@
   height: 100%;
   border-radius: 50%;
   -webkit-animation: colorload 2s;
+  transition: all .5s;
+}
+
+.step3_button.progress-0 {
+    transition: all .5s;
 }
 
 .step3_button.progress-0:after {
