Make UI simplier * add button and enter key listener on frame enter stage * add download and return buttons on final step

--- a/src/client/styles/app.css
+++ b/src/client/styles/app.css
@@ -1,5 +1,6 @@
 @import './common.css';
 @import './loader.css';
+@import './step0.css';
 @import './step1.css';
 @import './step2.css';
 @import './step3.css';
