--- a/src/client/styles/step4.css
+++ b/src/client/styles/step4.css
@@ -10,12 +10,14 @@
     height: 20%;
     background-color: #e74c3c;
     cursor: pointer;
+    font-size: 30px;
 }
 
 .step_4_button__download {
     height: 20%;
     background-color: #4caf50;
     cursor: pointer;
+    font-size: 40px;
 }
 
 .step4_button {
