--- a/src/client/styles/step3.css
+++ b/src/client/styles/step3.css
@@ -23,7 +23,7 @@
     width: 90px;
     height: 30px;
     line-height: 30px;
-    margin-left: -95px;
+    margin-left: -2.2em;
     margin-top: -15px;
     text-align: center;
     border-radius: 50%;
